--- a/OpenCVKitchen/Pages/Operations.razor
+++ b/OpenCVKitchen/Pages/Operations.razor
@@ -1,21 +1,31 @@
-﻿@page "/histogram"
+﻿@page "/operations"
 @using OpenCVKitchen.Data
 @using System.Reflection
 @inject ImageService ImageService
 @inject SharedVideoSource VideoSource
-<h1>OpenCV - Histogram</h1>
+
+<style>
+    .canvainput {
+        position: absolute;
+        width: inherit;
+        height: inherit;
+    }
+</style>
+
+<h1>OpenCV - Operations</h1>
 
 <div class="row">
     <div class="col">
         <div class="container">
             @if (_imgSrcSource != default)
             {
-                <img src="data:image/png;base64,@_imgSrcSource" />
+                <h3 class="text-center">Original</h3>
+                <img class="img-fluid" src="data:image/png;base64,@_imgSrcSource" />
             }
 
-            <div class="input-group mb-3 w-25">
+            <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                    <label class="input-group-text">Record for</label>
+                    <label class="input-group-text">Operator</label>
                 </div>
                 <select class="custom-select" id="inputGroupSelect01" @bind="_currentValue">
                     @foreach (var v in _keys)
@@ -56,7 +66,8 @@
         {
             <div class="container justify-content-center">
                 <h3 class="text-center">@r.Key</h3>
-                <img class="d-flex mx-auto" src="data:image/png;base64,@r.Value" />
+
+                <img class="img-fluid d-flex mx-auto" src="data:image/png;base64,@r.Value" />
             </div>
         }
     </div>
@@ -85,12 +96,11 @@
             {
                 foreach (MethodInfo method in methods)
                 {
-                    if (method.Name == _currentValue)
-                    {
-                        var result = (byte[])method.Invoke(op, new object[] { frame });
+                    if (method.Name != _currentValue) continue;
 
-                        _dict[method.Name] = Convert.ToBase64String(result);
-                    }
+                    var result = (byte[])method.Invoke(op, new object[] { frame });
+
+                    _dict[method.Name] = Convert.ToBase64String(result);
                 }
             });
 
