--- a/OpenCVKitchen/Shared/NavMenu.razor
+++ b/OpenCVKitchen/Shared/NavMenu.razor
@@ -8,20 +8,10 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="histogram">
+            <NavLink class="nav-link" href="operations">
                 <span class="oi oi-plus" aria-hidden="true"></span> Histogram
             </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
+        </li> 
     </ul>
 </div>
 
