--- a/OpenCVKitchen/Shared/MainLayout.razor
+++ b/OpenCVKitchen/Shared/MainLayout.razor
@@ -9,7 +9,7 @@
         <a href="https://t.me/maxrev/" target="_blank">Me</a>
     </div>
 
-    <div class="container px-4">
+    <div class="px-4">
         @Body
     </div>
 </div>
