--- a/OpenCVKitchen/Shared/NavMenu.razor
+++ b/OpenCVKitchen/Shared/NavMenu.razor
@@ -9,7 +9,7 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="operations">
-                <span class="oi oi-plus" aria-hidden="true"></span> Histogram
+                <span class="oi oi-plus" aria-hidden="true"></span> Playground
             </NavLink>
         </li> 
     </ul>
