--- a/OpenCVKitchen/wwwroot/css/site.css
+++ b/OpenCVKitchen/wwwroot/css/site.css
@@ -1,38 +1,30 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
-html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
+html, body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; }
 
-a, .btn-link {
-    color: #0366d6;
-}
+a, .btn-link { color: #0366d6; }
 
 .btn-primary {
-    color: #fff;
     background-color: #1b6ec2;
     border-color: #1861ac;
+    color: #fff;
 }
 
 app {
-    position: relative;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .top-row {
-    height: 3.5rem;
-    display: flex;
     align-items: center;
+    display: flex;
+    height: 3.5rem;
 }
 
-.main {
-    flex: 1;
-}
+.main { flex: 1; }
 
-pre .win {
-    font-size: 2em;
-}
+pre .win { font-size: 2em; }
 
 .main .top-row {
     background-color: #f7f7f7;
@@ -40,86 +32,66 @@ pre .win {
     justify-content: flex-end;
 }
 
-    .main .top-row > a, .main .top-row .btn-link {
-        white-space: nowrap;
-        margin-left: 1.5rem;
-    }
-
-    .main .top-row a:first-child {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-.sidebar {
-    background-image: linear-gradient(180deg, rgb(0 47 136) 0%, #ffffff 70%);
+.main .top-row > a, .main .top-row .btn-link {
+    margin-left: 1.5rem;
+    white-space: nowrap;
 }
 
-    .sidebar .top-row {
-        background-color: rgba(0,0,0,0.4);
-    }
-
-    .sidebar .navbar-brand {
-        font-size: 1.1rem;
-    }
-
-    .sidebar .oi {
-        width: 2rem;
-        font-size: 1.1rem;
-        vertical-align: text-top;
-        top: -2px;
-    }
-
-    .sidebar .nav-item {
-        font-size: 0.9rem;
-        padding-bottom: 0.5rem;
-    }
-
-        .sidebar .nav-item:first-of-type {
-            padding-top: 1rem;
-        }
-
-        .sidebar .nav-item:last-of-type {
-            padding-bottom: 1rem;
-        }
-
-        .sidebar .nav-item a {
-            color: #d7d7d7;
-            border-radius: 4px;
-            height: 3rem;
-            display: flex;
-            align-items: center;
-            line-height: 3rem;
-        }
-
-            .sidebar .nav-item a.active {
-                background-color: rgba(255,255,255,0.25);
-                color: white;
-            }
-
-            .sidebar .nav-item a:hover {
-                background-color: rgba(255,255,255,0.1);
-                color: white;
-            }
-
-.content {
-    padding-top: 1.1rem;
+.main .top-row a:first-child {
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.navbar-toggler {
+.sidebar { background-image: linear-gradient(180deg, rgb(0 47 136) 0%, #ffffff 70%); }
+
+.sidebar .top-row { background-color: rgba(0, 0, 0, 0.4); }
+
+.sidebar .navbar-brand { font-size: 1.1rem; }
+
+.sidebar .oi {
+    font-size: 1.1rem;
+    top: -2px;
+    vertical-align: text-top;
+    width: 2rem;
+}
+
+.sidebar .nav-item {
+    font-size: 0.9rem;
+    padding-bottom: 0.5rem;
+}
+
+.sidebar .nav-item:first-of-type { padding-top: 1rem; }
+
+.sidebar .nav-item:last-of-type { padding-bottom: 1rem; }
+
+.sidebar .nav-item a {
+    align-items: center;
+    border-radius: 4px;
+    color: #d7d7d7;
+    display: flex;
+    height: 3rem;
+    line-height: 3rem;
+}
+
+.sidebar .nav-item a.active {
+    background-color: rgba(255, 255, 255, 0.25);
+    color: white;
+}
+
+.sidebar .nav-item a:hover {
     background-color: rgba(255, 255, 255, 0.1);
+    color: white;
 }
 
-.valid.modified:not([type=checkbox]) {
-    outline: 1px solid #26b050;
-}
+.content { padding-top: 1.1rem; }
 
-.invalid {
-    outline: 1px solid red;
-}
+.navbar-toggler { background-color: rgba(255, 255, 255, 0.1); }
 
-.validation-message {
-    color: red;
-}
+.valid.modified:not([type=checkbox]) { outline: 1px solid #26b050; }
+
+.invalid { outline: 1px solid red; }
+
+.validation-message { color: red; }
 
 #blazor-error-ui {
     background: lightyellow;
@@ -133,37 +105,29 @@ pre .win {
     z-index: 1000;
 }
 
-    #blazor-error-ui .dismiss {
-        cursor: pointer;
-        position: absolute;
-        right: 0.75rem;
-        top: 0.5rem;
-    }
+#blazor-error-ui .dismiss {
+    cursor: pointer;
+    position: absolute;
+    right: 0.75rem;
+    top: 0.5rem;
+}
 
 @media (max-width: 767.98px) {
-    .main .top-row:not(.auth) {
-        display: none;
-    }
+    .main .top-row:not(.auth) { display: none; }
 
-    .main .top-row.auth {
-        justify-content: space-between;
-    }
+    .main .top-row.auth { justify-content: space-between; }
 
-    .main .top-row a, .main .top-row .btn-link {
-        margin-left: 0;
-    }
+    .main .top-row a, .main .top-row .btn-link { margin-left: 0; }
 }
 
 @media (min-width: 768px) {
-    app {
-        flex-direction: row;
-    }
+    app { flex-direction: row; }
 
     .sidebar {
-        width: 250px;
         height: 100vh;
         position: sticky;
         top: 0;
+        width: 250px;
     }
 
     .main .top-row {
@@ -176,9 +140,7 @@ pre .win {
         padding-right: 1.5rem !important;
     }
 
-    .navbar-toggler {
-        display: none;
-    }
+    .navbar-toggler { display: none; }
 
     .sidebar .collapse {
         /* Never collapse the sidebar for wide screens */
