--- a/OpenCVKitchen/Pages/Operations.razor
+++ b/OpenCVKitchen/Pages/Operations.razor
@@ -118,7 +118,7 @@
         @foreach (var r in _dict)
         {
             <div class="container justify-content-center">
-                <h3 class="text-center">@r.Key</h3>
+                <h3 class="text-center">@_currentValueName - @r.Key</h3>
                 <div>
                     <img class="img-fluid d-flex mx-auto" src="data:image/png;base64,@r.Value"/>
                 </div>
